2007-09-25  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-metafile.c (set_metafile_contents):
	Don't crash on files that have slashes in them.

2007-09-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory-private.h:
	Use gio to do directory counts

2007-09-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-file-private.h:
	Define NAUTILUS_FILE_DEFAULT_ATTRIBUTES

2007-09-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-directory-file.c:
        * libnautilus-private/nautilus-desktop-icon-file.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-file.h:
        * libnautilus-private/nautilus-saved-search-file.c:
        * libnautilus-private/nautilus-search-directory-file.c:
        * libnautilus-private/nautilus-trash-file.c:
	There was some problems removing the virtual call for
	get_file_type, as this broke getting the type for "virtual"
	directory types like trash and the desktop. Re-introduce this,
	but set the type directly instead of via an indirect jump.

2007-09-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-file.h:
	nautilus_file_get_for_location -> nautilus_file_get
	same for get_existing

2007-09-24  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-bookmark.c:
        * libnautilus-private/nautilus-directory-async.c:
        * libnautilus-private/nautilus-directory.c:
        * libnautilus-private/nautilus-file-operations.c:
        * libnautilus-private/nautilus-file-utilities.c:
        * libnautilus-private/nautilus-file.c:
        * libnautilus-private/nautilus-file.h: